<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.r.cohen.smartstepstracker.ui.MainViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">
        <TextView
            android:id="@+id/textviewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/settingsIcon"
            app:layout_constraintTop_toTopOf="@+id/settingsIcon"
            app:layout_constraintBottom_toBottomOf="@+id/settingsIcon"
            android:paddingBottom="6dp"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:text="@string/app_name"
            style="@style/Header2" />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/settingsIcon"
            android:contentDescription="@string/settings"
            android:onClick="@{() -> viewModel.onSettingsClick()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="?attr/colorSecondaryVariant"
            android:src="@drawable/ic_outline_settings_24"
            android:padding="@dimen/default_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            app:tabTextAppearance="@style/TabTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsIcon">
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/today"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_week"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_30_days"/>
        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/tabsPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
