<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.PermissionsActivity"
    android:background="@color/teal_700"
    android:padding="40dp">
    <TextView
        android:id="@+id/textviewTitle"
        style="@style/Header0"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/permissionDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BodyLarge"
        android:textColor="@android:color/white"
        android:text="@string/activity_permission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewTitle"
        app:layout_constraintBottom_toTopOf="@+id/permissionButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/permissionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_permission_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionDescription"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>